--- a/locale/az/LC_MESSAGES/django.po
+++ b/locale/az/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-12 14:24+0400\n"
+"POT-Creation-Date: 2024-11-13 01:13+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,12 +19,19 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 
+
 #: .\Web_Employ\middleware.py:16
 msgid "You are blocked from this site"
-msgstr "Sen bu saytdan bloklanmısan"
+msgstr "Sen bu saytdan bloklanmısan."
 
-#: .\employees\api\views.py:34 .\employees\api\views.py:52
-#: .\employees\api\views.py:80 .\employees\api\views.py:96
-#: .\employees\api\views.py:122 .\employees\api\views.py:138
+#: .\employees\api\views.py:35 .\employees\api\views.py:57
 msgid "No Department matches the given query."
-msgstr "Verilən sorğuya heç bir id uyğun gəlmir."
+msgstr "Göndərilən sorğu heç bir  Department ilə uyğun gəlmir."
+
+#: .\employees\api\views.py:91 .\employees\api\views.py:108
+msgid "No Position matches the given query."
+msgstr "Göndərilən sorğu heç bir Position ilə uyğun gəlmir."
+
+#: .\employees\api\views.py:135 .\employees\api\views.py:152
+msgid "No Employee matches the given query."
+msgstr "Göndərilən sorğu heç bir Employee ilə uyğun gəlmir."
